2014-03-19  Per Bothner  <per@bothner.com>

	* RunProcess.java (handleMarks): Merge into tokenize method.

2014-03-18  Per Bothner  <per@bothner.com>

	* GetModuleClass.java (classResourcePath): Moved from URLPath.java.

2014-02-28  Per Bothner  <per@bothner.com>

	* FileUtils.java: Removed class.
	(createTempFile): Inlined into make-temporary-file in files.scm.

2014-02-16  Per Bothner  <per@bothner.com>

	* CallCC.java: Make sure Error is uncaught or re-thrown.
	* CompileNamedPart.java: Likewise.
	* GetNamedPart.java: Likewise.
	* LProcess.java: Likewise.
	* RunProcess.java: Likewise.
	* SetNamedPart.java: Likewise.

	* CompileMisc.java (compileCallCC): Pass appropriate type
	for emitTryStart.

2014-02-08  Charles Turner  <chturne@gmail.com>

	* Apply.java (getArguments): New overload to allow getArguments to
	be called from Lisp code.

2014-02-07  Per Bothner  <per@bothner.com>

	* RunProcess.java (getInputStreamFrom, copyStream):  Make public -
	used by path-data setter.

2014-01-27  Per Bothner  <per@bothner.com>

	* RunProcess.java (handleMarks, tokenize): Fix some problems
	in handling of final skippable newlines in substituted text.

2014-01-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge into ../../../gnu/Makefile.am and remove.

2013-12-30  Per Bothner  <per@bothner.com>

	* RunProcess.java (doit): Add support for reading from a port.
	Add suport for 'current as a port specifier.
	Copy output/error to ports in a thread.

2013-12-29  Per Bothner  <per@bothner.com>

	* CompileMisc.java (compileEq): Optimize to use ifnull/ifnonnull
	instructions if comparing against #!null.

2013-12-26  Per Bothner  <per@bothner.com>

	* RunProcess.java: Add near-complete support for Java 6-or-older.
	Add support for 'out-to: PORT' and 'err-to: PORT'.

2013-12-22  Per Bothner  <per@bothner.com>

	* RunProcess.java: New class extends MethodProc,
	implements the Scheme 'run-process'.
	* CompileProcess.java: New class optimizes of RunProcess.